// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot, state derived from props, DISCONNECTED 1`] = `
<div
  className="sc-eqIVtm sc-fAjcbJ koGyEZ"
>
  <div
    className="sc-jhAzac spot-tile sc-gisBJw iZBBaU"
  >
    <div
      className="sc-caSCKo jjNSwx"
    >
      <div
        className="sc-hmzhuo eiuqZU"
      >
        <div
          className="sc-dVhcbM erSHUY"
        >
          <div
            className="sc-hzDkRC hefQwu"
          >
            EUR/USD
          </div>
          <div
            className="sc-bRBYWo kCsDOb"
          >
            SPT (07 APR)
          </div>
        </div>
      </div>
      <div
        className="sc-gPEVay YCpKu"
      >
        <button
          className="sc-EHOje gCbQHr"
          direction="Sell"
          disabled={true}
          onClick={[Function]}
        >
          <div
            className="sc-gZMcBi egNMcT"
            disabled={true}
          >
            <div
              className="sc-gqjmRU cKkifn"
            >
              <div
                className="sc-bZQynM sc-gzVnrw lDSPw"
              >
                SELL
              </div>
              <div
                className="sc-bZQynM sc-htoDjs duRaET"
              >
                1.
              </div>
            </div>
            <div
              className="sc-bZQynM sc-dnqmqq fBMQfa"
            >
              48
            </div>
            <div
              className="sc-bZQynM sc-iwsKbI CPNEg"
            >
              4
            </div>
          </div>
        </button>
        <div
          className="sc-jzJRlG iKkJoh"
        >
          <i
            aria-hidden="true"
            className="fas fa-caret-up sc-jTzLTM gkTtVL"
            color="green"
          />
          <div
            className="sc-fjdhpX flAxeK"
          >
            0.0
          </div>
          <i
            aria-hidden="true"
            className="fas fa-caret-down sc-jTzLTM TMXdn"
            color="red"
          />
        </div>
        <button
          className="sc-EHOje gCbQHr"
          direction="Buy"
          disabled={true}
          onClick={[Function]}
        >
          <div
            className="sc-gZMcBi egNMcT"
            disabled={true}
          >
            <div
              className="sc-gqjmRU cKkifn"
            >
              <div
                className="sc-bZQynM sc-gzVnrw lDSPw"
              >
                BUY
              </div>
              <div
                className="sc-bZQynM sc-htoDjs duRaET"
              >
                1.
              </div>
            </div>
            <div
              className="sc-bZQynM sc-dnqmqq fBMQfa"
            >
              48
            </div>
            <div
              className="sc-bZQynM sc-iwsKbI CPNEg"
            >
              4
            </div>
          </div>
        </button>
      </div>
    </div>
    <div
      className="sc-caSCKo jjNSwx"
    >
      <div
        className="sc-kjoXOD bvCYDb"
      >
        <div
          className="sc-htpNat idZgat"
        >
          <span
            className="sc-bdVaJa bxrsSL"
          >
            EUR
          </span>
          <input
            className="sc-bxivhb ixCVbX"
            disabled={true}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyPress={[Function]}
            type="text"
            value="1,000,000"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Snapshot, state derived from props, RFQ canRequest 1`] = `
<div
  className="sc-eqIVtm sc-fAjcbJ koGyEZ"
>
  <div
    className="sc-jhAzac spot-tile sc-gisBJw iZBBaU"
  >
    <div
      className="sc-caSCKo jjNSwx"
    >
      <div
        className="sc-hmzhuo eiuqZU"
      >
        <div
          className="sc-dVhcbM erSHUY"
        >
          <div
            className="sc-hzDkRC hefQwu"
          >
            EUR/USD
          </div>
          <div
            className="sc-bRBYWo kCsDOb"
          >
            SPT (07 APR)
          </div>
        </div>
      </div>
      <div
        className="sc-gPEVay YCpKu"
      >
        <div
          className="sc-iRbamj lkVRJy"
        >
          <i
            className="fas fa-ban fa-flip-horizontal sc-jlyJG cibsWh"
          />
          Streaming price unavailable
        </div>
        <div
          className="sc-jzJRlG iKkJoh"
        >
          <i
            aria-hidden="true"
            className="fas fa-caret-up sc-jTzLTM gkTtVL"
            color="green"
          />
          <div
            className="sc-fjdhpX flAxeK"
          >
            0.0
          </div>
          <i
            aria-hidden="true"
            className="fas fa-caret-down sc-jTzLTM TMXdn"
            color="red"
          />
        </div>
        <div
          className="sc-iRbamj lkVRJy"
        >
          <i
            className="fas fa-ban fa-flip-horizontal sc-jlyJG cibsWh"
          />
          Streaming price unavailable
        </div>
      </div>
    </div>
    <div
      className="sc-caSCKo jjNSwx"
    >
      <div
        className="sc-kjoXOD bvCYDb"
      >
        <div
          className="sc-htpNat idZgat"
        >
          <span
            className="sc-bdVaJa bxrsSL"
          >
            EUR
          </span>
          <input
            className="sc-bxivhb fauXdE"
            disabled={false}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyPress={[Function]}
            type="text"
            value="1,000,000"
          />
          <button
            className="sc-ifAKCX gROrJN"
            onClick={[Function]}
          >
            <i
              className="fas fa-redo fa-flip-horizontal"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Snapshot, state derived from props, RFQ expired 1`] = `
<div
  className="sc-eqIVtm sc-fAjcbJ koGyEZ"
>
  <div
    className="sc-jhAzac spot-tile sc-gisBJw iZBBaU"
  >
    <div
      className="sc-caSCKo jjNSwx"
    >
      <div
        className="sc-hmzhuo eiuqZU"
      >
        <div
          className="sc-dVhcbM erSHUY"
        >
          <div
            className="sc-hzDkRC hefQwu"
          >
            EUR/USD
          </div>
          <div
            className="sc-bRBYWo kCsDOb"
          >
            SPT (07 APR)
          </div>
        </div>
      </div>
      <div
        className="sc-gPEVay YCpKu"
      >
        <button
          className="sc-EHOje gCbQHr"
          direction="Sell"
          disabled={true}
          onClick={[Function]}
        >
          <div
            className="sc-gZMcBi egNMcT"
            disabled={true}
          >
            <div
              className="sc-gqjmRU cKkifn"
            >
              <div
                className="sc-bZQynM sc-gzVnrw lDSPw"
              >
                SELL
              </div>
              <div
                className="sc-bZQynM sc-htoDjs duRaET"
              >
                1.
              </div>
            </div>
            <div
              className="sc-bZQynM sc-dnqmqq fBMQfa"
            >
              48
            </div>
            <div
              className="sc-bZQynM sc-iwsKbI CPNEg"
            >
              4
            </div>
          </div>
          <div
            className="sc-VigVT cLQaHF"
          >
            Expired
          </div>
        </button>
        <div
          className="sc-jzJRlG iKkJoh"
        >
          <i
            aria-hidden="true"
            className="fas fa-caret-up sc-jTzLTM gkTtVL"
            color="green"
          />
          <div
            className="sc-fjdhpX flAxeK"
          >
            0.0
          </div>
          <i
            aria-hidden="true"
            className="fas fa-caret-down sc-jTzLTM TMXdn"
            color="red"
          />
        </div>
        <button
          className="sc-EHOje gCbQHr"
          direction="Buy"
          disabled={true}
          onClick={[Function]}
        >
          <div
            className="sc-gZMcBi egNMcT"
            disabled={true}
          >
            <div
              className="sc-gqjmRU cKkifn"
            >
              <div
                className="sc-bZQynM sc-gzVnrw lDSPw"
              >
                BUY
              </div>
              <div
                className="sc-bZQynM sc-htoDjs duRaET"
              >
                1.
              </div>
            </div>
            <div
              className="sc-bZQynM sc-dnqmqq fBMQfa"
            >
              48
            </div>
            <div
              className="sc-bZQynM sc-iwsKbI CPNEg"
            >
              4
            </div>
          </div>
          <div
            className="sc-VigVT cLQaHF"
          >
            Expired
          </div>
        </button>
      </div>
    </div>
    <div
      className="sc-caSCKo jjNSwx"
    >
      <div
        className="sc-kjoXOD bvCYDb"
      >
        <div
          className="sc-htpNat idZgat"
        >
          <span
            className="sc-bdVaJa bxrsSL"
          >
            EUR
          </span>
          <input
            className="sc-bxivhb fauXdE"
            disabled={false}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyPress={[Function]}
            type="text"
            value="1,000,000"
          />
          <button
            className="sc-ifAKCX gROrJN"
            onClick={[Function]}
          >
            <i
              className="fas fa-redo fa-flip-horizontal"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Snapshot, state derived from props, RFQ received 1`] = `
<div
  className="sc-eqIVtm sc-fAjcbJ koGyEZ"
>
  <div
    className="sc-jhAzac spot-tile sc-gisBJw iZBBaU"
  >
    <div
      className="sc-caSCKo jjNSwx"
    >
      <div
        className="sc-hmzhuo eiuqZU"
      >
        <div
          className="sc-dVhcbM erSHUY"
        >
          <div
            className="sc-hzDkRC hefQwu"
          >
            EUR/USD
          </div>
          <div
            className="sc-bRBYWo kCsDOb"
          >
            SPT (07 APR)
          </div>
        </div>
      </div>
      <div
        className="sc-gPEVay YCpKu"
      >
        <button
          className="sc-EHOje ixrtnE"
          direction="Sell"
          disabled={false}
          onClick={[Function]}
        >
          <div
            className="sc-gZMcBi crpdKd"
            disabled={false}
          >
            <div
              className="sc-gqjmRU cKkifn"
            >
              <div
                className="sc-bZQynM sc-gzVnrw lDSPw"
              >
                SELL
              </div>
              <div
                className="sc-bZQynM sc-htoDjs duRaET"
              >
                1.
              </div>
            </div>
            <div
              className="sc-bZQynM sc-dnqmqq fBMQfa"
            >
              48
            </div>
            <div
              className="sc-bZQynM sc-iwsKbI CPNEg"
            >
              4
            </div>
          </div>
        </button>
        <div
          className="sc-jzJRlG iKkJoh"
        >
          <i
            aria-hidden="true"
            className="fas fa-caret-up sc-jTzLTM gkTtVL"
            color="green"
          />
          <div
            className="sc-fjdhpX flAxeK"
          >
            0.0
          </div>
          <i
            aria-hidden="true"
            className="fas fa-caret-down sc-jTzLTM TMXdn"
            color="red"
          />
        </div>
        <button
          className="sc-EHOje iHiLlf"
          direction="Buy"
          disabled={false}
          onClick={[Function]}
        >
          <div
            className="sc-gZMcBi crpdKd"
            disabled={false}
          >
            <div
              className="sc-gqjmRU cKkifn"
            >
              <div
                className="sc-bZQynM sc-gzVnrw lDSPw"
              >
                BUY
              </div>
              <div
                className="sc-bZQynM sc-htoDjs duRaET"
              >
                1.
              </div>
            </div>
            <div
              className="sc-bZQynM sc-dnqmqq fBMQfa"
            >
              48
            </div>
            <div
              className="sc-bZQynM sc-iwsKbI CPNEg"
            >
              4
            </div>
          </div>
        </button>
      </div>
    </div>
    <div
      className="sc-caSCKo jjNSwx"
    >
      <div
        className="sc-kjoXOD bvCYDb"
      >
        <div
          className="sc-htpNat idZgat"
        >
          <span
            className="sc-bdVaJa bxrsSL"
          >
            EUR
          </span>
          <input
            className="sc-bxivhb ixCVbX"
            disabled={true}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyPress={[Function]}
            type="text"
            value="1,000,000"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Snapshot, state derived from props, RFQ requested 1`] = `
<div
  className="sc-eqIVtm sc-fAjcbJ koGyEZ"
>
  <div
    className="sc-jhAzac spot-tile sc-gisBJw iZBBaU"
  >
    <div
      className="sc-caSCKo jjNSwx"
    >
      <div
        className="sc-hmzhuo eiuqZU"
      >
        <div
          className="sc-dVhcbM erSHUY"
        >
          <div
            className="sc-hzDkRC hefQwu"
          >
            EUR/USD
          </div>
          <div
            className="sc-bRBYWo kCsDOb"
          >
            SPT (07 APR)
          </div>
        </div>
      </div>
      <div
        className="sc-gPEVay YCpKu"
      >
        <div
          className="sc-iRbamj lkVRJy"
        >
          <div
            className="sc-gipzik eqzpnJ"
          >
            <svg
              height={14}
              width={14}
            >
              <rect
                className="sc-kEYyzF coOeJm"
                height={10.5}
                order={0}
                speed={0.8}
                type="secondary"
                width={2.625}
                x={0.25}
              />
              <rect
                className="sc-kEYyzF gedtZd"
                height={10.5}
                order={1}
                speed={0.8}
                type="secondary"
                width={2.625}
                x={3.875}
              />
              <rect
                className="sc-kEYyzF kSdfCf"
                height={10.5}
                order={2}
                speed={0.8}
                type="secondary"
                width={2.625}
                x={7.5}
              />
              <rect
                className="sc-kEYyzF brVaZY"
                height={10.5}
                order={3}
                speed={0.8}
                type="secondary"
                width={2.625}
                x={11.125}
              />
            </svg>
          </div>
          Awaiting price
        </div>
        <div
          className="sc-jzJRlG iKkJoh"
        >
          <i
            aria-hidden="true"
            className="fas fa-caret-up sc-jTzLTM gkTtVL"
            color="green"
          />
          <div
            className="sc-fjdhpX flAxeK"
          >
            0.0
          </div>
          <i
            aria-hidden="true"
            className="fas fa-caret-down sc-jTzLTM TMXdn"
            color="red"
          />
        </div>
        <div
          className="sc-iRbamj lkVRJy"
        >
          <div
            className="sc-gipzik eqzpnJ"
          >
            <svg
              height={14}
              width={14}
            >
              <rect
                className="sc-kEYyzF coOeJm"
                height={10.5}
                order={0}
                speed={0.8}
                type="secondary"
                width={2.625}
                x={0.25}
              />
              <rect
                className="sc-kEYyzF gedtZd"
                height={10.5}
                order={1}
                speed={0.8}
                type="secondary"
                width={2.625}
                x={3.875}
              />
              <rect
                className="sc-kEYyzF kSdfCf"
                height={10.5}
                order={2}
                speed={0.8}
                type="secondary"
                width={2.625}
                x={7.5}
              />
              <rect
                className="sc-kEYyzF brVaZY"
                height={10.5}
                order={3}
                speed={0.8}
                type="secondary"
                width={2.625}
                x={11.125}
              />
            </svg>
          </div>
          Awaiting price
        </div>
      </div>
    </div>
    <div
      className="sc-caSCKo jjNSwx"
    >
      <div
        className="sc-kjoXOD bvCYDb"
      >
        <div
          className="sc-htpNat idZgat"
        >
          <span
            className="sc-bdVaJa bxrsSL"
          >
            EUR
          </span>
          <input
            className="sc-bxivhb ixCVbX"
            disabled={true}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyPress={[Function]}
            type="text"
            value="1,000,000"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Snapshot, state derived from props, defaults, RFQ none, should be able to excute 1`] = `
<div
  className="sc-eqIVtm sc-fAjcbJ koGyEZ"
>
  <div
    className="sc-jhAzac spot-tile sc-gisBJw iZBBaU"
  >
    <div
      className="sc-caSCKo jjNSwx"
    >
      <div
        className="sc-hmzhuo eiuqZU"
      >
        <div
          className="sc-dVhcbM erSHUY"
        >
          <div
            className="sc-hzDkRC hefQwu"
          >
            EUR/USD
          </div>
          <div
            className="sc-bRBYWo kCsDOb"
          >
            SPT (07 APR)
          </div>
        </div>
      </div>
      <div
        className="sc-gPEVay YCpKu"
      >
        <button
          className="sc-EHOje kkdSuS"
          direction="Sell"
          disabled={false}
          onClick={[Function]}
        >
          <div
            className="sc-gZMcBi crpdKd"
            disabled={false}
          >
            <div
              className="sc-gqjmRU cKkifn"
            >
              <div
                className="sc-bZQynM sc-gzVnrw lDSPw"
              >
                SELL
              </div>
              <div
                className="sc-bZQynM sc-htoDjs duRaET"
              >
                1.
              </div>
            </div>
            <div
              className="sc-bZQynM sc-dnqmqq fBMQfa"
            >
              48
            </div>
            <div
              className="sc-bZQynM sc-iwsKbI CPNEg"
            >
              4
            </div>
          </div>
        </button>
        <div
          className="sc-jzJRlG iKkJoh"
        >
          <i
            aria-hidden="true"
            className="fas fa-caret-up sc-jTzLTM gkTtVL"
            color="green"
          />
          <div
            className="sc-fjdhpX flAxeK"
          >
            0.0
          </div>
          <i
            aria-hidden="true"
            className="fas fa-caret-down sc-jTzLTM TMXdn"
            color="red"
          />
        </div>
        <button
          className="sc-EHOje ciDDPg"
          direction="Buy"
          disabled={false}
          onClick={[Function]}
        >
          <div
            className="sc-gZMcBi crpdKd"
            disabled={false}
          >
            <div
              className="sc-gqjmRU cKkifn"
            >
              <div
                className="sc-bZQynM sc-gzVnrw lDSPw"
              >
                BUY
              </div>
              <div
                className="sc-bZQynM sc-htoDjs duRaET"
              >
                1.
              </div>
            </div>
            <div
              className="sc-bZQynM sc-dnqmqq fBMQfa"
            >
              48
            </div>
            <div
              className="sc-bZQynM sc-iwsKbI CPNEg"
            >
              4
            </div>
          </div>
        </button>
      </div>
    </div>
    <div
      className="sc-caSCKo jjNSwx"
    >
      <div
        className="sc-kjoXOD bvCYDb"
      >
        <div
          className="sc-htpNat idZgat"
        >
          <span
            className="sc-bdVaJa bxrsSL"
          >
            EUR
          </span>
          <input
            className="sc-bxivhb fauXdE"
            disabled={false}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyPress={[Function]}
            type="text"
            value="1,000,000"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Snapshot, state derived from props, in trade 1`] = `
<div
  className="sc-eqIVtm sc-fAjcbJ koGyEZ"
>
  <div
    className="sc-jhAzac spot-tile sc-gisBJw iZBBaU"
  >
    <div
      className="sc-caSCKo jjNSwx"
    >
      <div
        className="sc-hmzhuo eiuqZU"
      >
        <div
          className="sc-dVhcbM erSHUY"
        >
          <div
            className="sc-hzDkRC hefQwu"
          >
            EUR/USD
          </div>
          <div
            className="sc-bRBYWo kCsDOb"
          >
            SPT (07 APR)
          </div>
        </div>
      </div>
      <div
        className="sc-gPEVay YCpKu"
      >
        <button
          className="sc-EHOje gCbQHr"
          direction="Sell"
          disabled={true}
          onClick={[Function]}
        >
          <div
            className="sc-gZMcBi egNMcT"
            disabled={true}
          >
            <div
              className="sc-gqjmRU cKkifn"
            >
              <div
                className="sc-bZQynM sc-gzVnrw lDSPw"
              >
                SELL
              </div>
              <div
                className="sc-bZQynM sc-htoDjs duRaET"
              >
                1.
              </div>
            </div>
            <div
              className="sc-bZQynM sc-dnqmqq fBMQfa"
            >
              48
            </div>
            <div
              className="sc-bZQynM sc-iwsKbI CPNEg"
            >
              4
            </div>
          </div>
        </button>
        <div
          className="sc-jzJRlG iKkJoh"
        >
          <i
            aria-hidden="true"
            className="fas fa-caret-up sc-jTzLTM gkTtVL"
            color="green"
          />
          <div
            className="sc-fjdhpX flAxeK"
          >
            0.0
          </div>
          <i
            aria-hidden="true"
            className="fas fa-caret-down sc-jTzLTM TMXdn"
            color="red"
          />
        </div>
        <button
          className="sc-EHOje gCbQHr"
          direction="Buy"
          disabled={true}
          onClick={[Function]}
        >
          <div
            className="sc-gZMcBi egNMcT"
            disabled={true}
          >
            <div
              className="sc-gqjmRU cKkifn"
            >
              <div
                className="sc-bZQynM sc-gzVnrw lDSPw"
              >
                BUY
              </div>
              <div
                className="sc-bZQynM sc-htoDjs duRaET"
              >
                1.
              </div>
            </div>
            <div
              className="sc-bZQynM sc-dnqmqq fBMQfa"
            >
              48
            </div>
            <div
              className="sc-bZQynM sc-iwsKbI CPNEg"
            >
              4
            </div>
          </div>
        </button>
      </div>
    </div>
    <div
      className="sc-caSCKo jjNSwx"
    >
      <div
        className="sc-kjoXOD bvCYDb"
      >
        <div
          className="sc-htpNat idZgat"
        >
          <span
            className="sc-bdVaJa bxrsSL"
          >
            EUR
          </span>
          <input
            className="sc-bxivhb ixCVbX"
            disabled={true}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyPress={[Function]}
            type="text"
            value="1,000,000"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
